--- a/nginx-k3s.yaml
+++ b/nginx-k3s.yaml
@@ -4,7 +4,7 @@ kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
-  replicas: 15
+  replicas: 3
   selector:
     matchLabels:
       app: nginx
@@ -13,6 +13,13 @@ spec:
       labels:
         app: nginx
     spec:
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: "kubernetes.io/hostname"
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              app: nginx
       containers:
         - name: nginx
           image: bashofmann/rancher-demo:1.0.0
