Add IfNotPresent pull policy and configure storage for IoT monitoring stack

--- a/iot-monitoring-dashboard/mosquito.yaml
+++ b/iot-monitoring-dashboard/mosquito.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: mosquito
           image: eclipse-mosquitto:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 1883
           volumeMounts:
