--- a/iot-monitoring-dashboard/grafana.yaml
+++ b/iot-monitoring-dashboard/grafana.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: grafana
           image: grafana/grafana:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
           resources:
