--- a/iot-monitoring-dashboard/influx-db.yaml
+++ b/iot-monitoring-dashboard/influx-db.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,12 +18,20 @@ spec:
       containers:
         - name: influxdb
           image: influxdb:latest
+          imagePullPolicy: IfNotPresent
           ports:
-            - containerPort: 8686
+            - containerPort: 8086
+          volumeMounts:
+            - name: influxdb-data
+              mountPath: /var/lib/influxdb2
           resources:
-            limits: 
+            limits:
               memory: "128Mi"
               cpu: "256m"
+      volumes:
+        - name: influxdb-data
+          persistentVolumeClaim:
+            claimName: influxdb-data
 
 ---
 apiVersion: v1
@@ -35,13 +42,24 @@ metadata:
   labels:
     app: influxdb
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: influxdb
   ports:
     - protocol: TCP
-      port: 8686
-      targetPort: 8686
-      nodePort: 30037
----
+      port: 8086
+      targetPort: 8086
 
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: influxdb-data
+  namespace: iot-monitoring
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: longhorn
+  resources:
+    requests:
+      storage: 10Gi
